# anytra

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/domain/: fewshot.rs  llm.rs  mod.rs  models.rs  sequential_thinking.rs  validation.rs
src/infrastructure/: config.rs  logger.rs  mod.rs
src/infrastructure/providers/: openrouter.rs
src/interface/mcp/: server.rs
src/usecases/: enhance_prompt.rs  mod.rs
