[package]
name = "anytra"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Abimanyu Wima Putra <im@bimatra.com>"]
description = "An MCP (Model Context Protocol) server in Rust that enhances prompts, with OpenRouter integration."

[[bin]]
name = "anytra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
itertools = "0.12"

[dev-dependencies]
